# FavItBetter

./: .gitignore  AGENTS.md  Gemfile  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature.md
.github/workflows/: pages.yml
docs/: README.md  _config.yml  hello-world.md  index.md
docs/00-foundation/: agent-first-specification.md  constitution.md  decision-log.md  glossary.md  project-brief.md
docs/01-lifecycle/: feature-lifecycle.md  knowledge-lifecycle.md
docs/01-lifecycle/features/: feature.bookmark-core.md  feature.mvp-desktop-chromium-cleaner.md
docs/02-governance/: ai-governance.md  documentation-drift.md  github-workflow.md  pages-publication.md  wiki-publication.md
docs/03-tracks/: executive-communication-track.md  specialized-tracks.md  ux-architecture-track.md
docs/04-templates/: feature-spec.md
docs/09-release-notes/: unreleased.md
docs/_data/: navigation.yml
docs/_layouts/: doc.html
docs/assets/css/: site.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: bookmarks.rs  db.rs  lib.rs  main.rs
src/routes/: +page.svelte
tests/fixtures/: chromium-bookmarks.sample.json
