[package]
name = "favitbetter"
version = "0.1.0"
description = "Local-first bookmark cleaner MVP"
authors = ["FavItBetter contributors"]
edition = "2021"

[lib]
name = "favitbetter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
url = "2"

[dev-dependencies]
tempfile = "3"
